fixed line break in chat

--- a/src/app/Components/Home/Home-Components/messages-container/messages-container.component.css
+++ b/src/app/Components/Home/Home-Components/messages-container/messages-container.component.css
@@ -1,6 +1,6 @@
 .text {
 	word-wrap: break-word;
-	white-space: pre;
+	white-space: pre-line;
 }
 
 /* Speech Bubbles */
